[metadata]
name = luhn-validator
version = attr: luhn_validator.__version__
author = Mohammed H Alshehri
author_email =
description = Simple validator for identification numbers based on the Luhn algorithm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = luhn, validator, validation, numbers, identification, imei, credit-card
license = MIT
license_files = LICENSE
url = https://github.com/mhalshehri/luhn-validator
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src
